# transaction-metadata

./: .gitignore  README.md  pyproject.toml  setup.cfg
scripts/: build-release.sh
tests/: test_loader.py
transaction_metadata/: __init__.py  loader.py
transaction_metadata/schemas/transaction/v1/: transaction.avsc
transaction_metadata/schemas/user/v1/: user.avsc
