[metadata]
name = transaction-metadata
version = 0.1.0
author = Manojit Roy
author_email = roy.monojit982810@gmail.com
description = A metadata package for transaction and user Avro schemas
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/noob-coder-dev/transaction-metadata.git
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True